--- a/front/src/components/P2P/P2P.css
+++ b/front/src/components/P2P/P2P.css
@@ -15,7 +15,7 @@
 
    
 }
-.Frame1{
+.Frame100{
     display: flex;
 width: 1079px;
 padding: 50px;
@@ -31,7 +31,7 @@ background: #010101;
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25); 
 
 }
-.Frame2{
+.Frame200{
     display: flex;
 padding: 15px 10px;
 align-items: center;
@@ -43,7 +43,7 @@ height: 10%;
 justify-content: left;
 flex-direction: row;
 }
-.Frame3{
+.Frame300{
     display: flex;
 padding: 13px 10px;
 flex-direction: column;
@@ -54,7 +54,7 @@ align-self: stretch;
 border-radius: 10px;
 background: #dfe4e4; 
 }
-.Frame4{
+.Frame400{
     display: flex;
 height:50vh;
 padding: 10px;
@@ -65,7 +65,7 @@ align-self: stretch;
 
     
 }
-.Frame5{
+.Frame500{
     display: flex;
 padding: 10px 20px;
 justify-content: left;
@@ -81,7 +81,7 @@ height: 10vh;
 
     
 }
-.Frame6{
+.Frame600{
     display: flex;
     padding: 20px;
     flex-direction: column;
@@ -98,7 +98,7 @@ height: 10vh;
     
     
 }
-.Frame7{
+.Frame700{
     display: flex;
 justify-content: flex-end;
 align-items: center; 
@@ -107,7 +107,7 @@ border-radius: 20px;
 
     
 }
-.Frame88{
+.Frame8800{
     display: flex;
     /* width: 1022px;
     height: 102px; */
@@ -121,7 +121,7 @@ border-radius: 20px;
 background: linear-gradient(334deg, #000 0%, #6A6A6A 100%);
 
 }
-.Frame8{
+.Frame800{
     display: flex;
 padding: 50px 10px;
 flex-direction: column;
@@ -130,7 +130,7 @@ gap: 10px;
 flex: 1 0 0;
 align-self: stretch; 
 }
-.Input{
+.Input00{
     border-radius: 20px;
     width: 80%;
     height: 5vh;
@@ -139,14 +139,14 @@ align-self: stretch;
     padding :  0px 10px ;
     
 }
-.Button{
+.Button00{
     border-radius :20px; 
     background-color:#757f7e;
     border-color: #000;
     width: 10%;
     height: 70%;
 }
-.Frame9{
+.Frame900{
     display: flex;
 /* width: 938px;
 height: 106px;*/
@@ -189,7 +189,7 @@ width: 100%;
 .Frame19{
     
 }
-.Frame20{
+.Frame2000{
     display: flex;
 padding: 0px 10px;
 flex-direction: column;
@@ -204,7 +204,7 @@ align-self: stretch;
 .Frame22{
     
 }
-.Frame23{
+.Frame2300{
     display: flex;
 height: 64px;
 padding: 13px 13px 13px 20px;
